# k8rag

./: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
model/: Dockerfile  pyproject.toml
model/app/: main.py
